new storybaord layout with segment MyJobs/MyPosts all-in-one page, as well as added + button segue to explore page to go to create post, MyPosts tab now is Messages but not implemented

--- a/helpr/helpr/Base.lproj/Main.storyboard
+++ b/helpr/helpr/Base.lproj/Main.storyboard
@@ -158,7 +158,13 @@
                             <outlet property="delegate" destination="CRG-QK-wGU" id="utP-dz-wkI"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Jobs" id="Dya-zo-DbQ"/>
+                    <navigationItem key="navigationItem" title="Jobs" id="Dya-zo-DbQ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="UsX-51-cJc">
+                            <connections>
+                                <segue destination="bLg-AJ-8rL" kind="show" identifier="CreatePost" id="RTk-ct-WvE"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6I1-rJ-mnI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -172,18 +178,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.8627385031" green="0.90716634039999999" blue="0.91320570860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <segmentedControl key="tableHeaderView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="QGl-vY-KdD">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="Providing Help"/>
+                                <segment title="Requesting Help"/>
+                            </segments>
+                            <connections>
+                                <action selector="switchJobsView:" destination="Yes-Bf-das" eventType="valueChanged" id="ael-Qc-6FK"/>
+                            </connections>
+                        </segmentedControl>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="JobsTableViewCell" id="yto-r3-NnM" customClass="JobsTableViewCell" customModule="helpr" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="280"/>
+                                <rect key="frame" x="0.0" y="58" width="375" height="280"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yto-r3-NnM" id="eAP-06-lM0">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="279.66666666666669"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pTn-ku-AFE" userLabel="Job Pic">
-                                            <rect key="frame" x="16" y="11" width="343" height="181"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rAj-rC-meO" userLabel="Job Title">
                                             <rect key="frame" x="16" y="200" width="343" height="44"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -216,6 +229,10 @@
                                                 </label>
                                             </subviews>
                                         </stackView>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pTn-ku-AFE" userLabel="Job Pic">
+                                            <rect key="frame" x="16" y="18" width="343" height="181"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -235,6 +252,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="My Jobs" id="vak-Xb-zpA"/>
+                    <connections>
+                        <outlet property="jobsSegment" destination="QGl-vY-KdD" id="BNo-mz-zdD"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z7W-hj-MPt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -416,7 +436,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hfp-Dl-cWh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-191.19999999999999" y="1437.9310344827586"/>
+            <point key="canvasLocation" x="-2409" y="1438"/>
         </scene>
         <!--My Posts-->
         <scene sceneID="RSY-1B-I24">
@@ -487,7 +507,7 @@
                             <outlet property="delegate" destination="eTq-SA-Pnq" id="iP7-l5-tWh"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="My Posts" id="pJd-UP-lj0"/>
+                    <navigationItem key="navigationItem" title="Messages" id="pJd-UP-lj0"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bw4-dI-Ecz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -678,7 +698,6 @@
                     <connections>
                         <segue destination="4kE-bR-hig" kind="relationship" relationship="viewControllers" id="v9B-TT-TkL"/>
                         <segue destination="YhJ-bv-Bxo" kind="relationship" relationship="viewControllers" id="Fkf-oy-qv1"/>
-                        <segue destination="TIA-Xy-J1y" kind="relationship" relationship="viewControllers" id="49X-Id-G8N"/>
                         <segue destination="Gdk-W1-dsT" kind="relationship" relationship="viewControllers" id="Jcg-dA-pt9"/>
                         <segue destination="eLF-pk-CA7" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                     </connections>
@@ -860,28 +879,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="az7-vj-BMJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-948" y="742.61083743842369"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="84S-us-F7h">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TIA-Xy-J1y" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="post" id="0Eu-Xs-sIJ"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LCD-76-Tc9">
-                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <textAttributes key="titleTextAttributes">
-                            <color key="textColor" name="RoyalPurple"/>
-                        </textAttributes>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="bLg-AJ-8rL" kind="relationship" relationship="rootViewController" id="v3E-Yh-rPJ"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="N1B-HT-HdD" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-191" y="743"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pTw-vq-RR7">
@@ -1173,11 +1170,6 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Create Post" id="HDx-MB-6bt">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="qeW-XS-orU">
-                            <connections>
-                                <action selector="exitPostAd:" destination="bLg-AJ-8rL" id="Fpz-qx-iVv"/>
-                            </connections>
-                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Post" id="xs3-Ec-Dbe">
                             <connections>
                                 <action selector="finishAddingPost:" destination="bLg-AJ-8rL" id="kki-yT-tSX"/>
@@ -1195,7 +1187,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T4V-t7-JKa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-191.19999999999999" y="2179.8029556650249"/>
+            <point key="canvasLocation" x="-2410" y="2180"/>
         </scene>
         <!--Categories-->
         <scene sceneID="EjE-c2-oWr">
@@ -1237,7 +1229,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PTx-Ef-nf8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="597.60000000000002" y="2179.8029556650249"/>
+            <point key="canvasLocation" x="-1660" y="2918"/>
         </scene>
         <!--Settings-->
         <scene sceneID="5HF-kZ-6zK">
@@ -19842,7 +19834,6 @@ AAAABAEAAAAAAAAAWQAAAAAAAAAAAAAAAAAIBZk
         <image name="job" width="33" height="33"/>
         <image name="jobs" width="33" height="33"/>
         <image name="myposts" width="33" height="33"/>
-        <image name="post" width="33" height="33"/>
         <image name="star" width="33" height="33"/>
         <image name="steve" width="400" height="266"/>
         <namedColor name="RoyalPurple">
