--- a/helpr/helpr/Base.lproj/Main.storyboard
+++ b/helpr/helpr/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hOV-LJ-OMl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1660" y="2179.8029556650249"/>
+            <point key="canvasLocation" x="-191" y="2180"/>
         </scene>
         <!--Home-->
         <scene sceneID="pJ0-4u-ZV2">
@@ -251,7 +251,13 @@
                             <outlet property="delegate" destination="Yes-Bf-das" id="PwS-yp-yoW"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="My Jobs" id="vak-Xb-zpA"/>
+                    <navigationItem key="navigationItem" title="My Jobs" id="vak-Xb-zpA">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="AaU-2X-pOB">
+                            <connections>
+                                <segue destination="bLg-AJ-8rL" kind="show" identifier="jobsCreatePost" id="Hot-sp-g1e"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="jobsSegment" destination="QGl-vY-KdD" id="BNo-mz-zdD"/>
                     </connections>
@@ -19844,6 +19850,7 @@ AAAABAEAAAAAAAAAWQAAAAAAAAAAAAAAAAAIBZk
         </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="Hot-sp-g1e"/>
         <segue reference="WXI-hz-ulL"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" name="RoyalPurple"/>
